--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "1.0.0",
   "description": "Kal Academy- Assignment 3 Team 4 Instagram like page",
   "main": "server.js",
+  
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Krishna Gurung, Jorge Canul, Srinivas Rao",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^6.2.0",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2",
+    "mongoose": "^5.13.3",
+    "nodemon": "^2.0.12",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.12"
-  }
+  "devDependencies": {}
 }
