--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.13.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-moment": "^1.1.1",
     "validator": "^13.6.0"
   },
   "devDependencies": {
